# casus-transaction-validator

./: .drone.yml  .editorconfig  .gitignore  README.md  build-app-artifact.sh  docker-compose.yml  package-lock.json
app/: Dockerfile  api.py  api_test.py  main.py  models.py  operations.py  pyproject.toml  test_api.py  test_models.py  test_operations.py
app/transactions/: commands.py  operations.py  routes.py
app/transactions/models/: __init__.py  mutation.py  test_mutation.py  test_transaction_collection.py  test_transaction_record.py  transaction_collection.py  transaction_record.py
case/: instructions.html  records.csv  records.xml
docs/: architecture.md  libraries.md  testing.md
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  TransactionResults.jsx
questions/: 1.txt
terraform/: api-gateway.tf  certificate.tf  data.tf  dns.tf  frontend.tf  iam-role-assume.tf  iam-role-permissions.tf  iam.tf  lambda.tf  providers.tf  state.tf  variables.tf
