[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["requinard <david@requinard.nl>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
uvicorn = "^0.12.0"
schwifty = "^2020.9.0"
python-multipart = "^0.0.5"
xmltodict = "^0.12.0"
mangum = "^0.9.2"
werkzeug = "^1.0.1"
requests = "^2.24.0"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
